--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,17 @@
     "require": {
         "php": ">=7.2",
         "orchestra/support": "^3.8 || ^4.0",
+        "php-http/guzzle6-adapter": "^2.0",
         "willdurand/geocoder": "^4.2"
     },
     "require-dev": {
+        "geocoder-php/google-maps-provider": "^4.4",
+        "geocoder-php/nominatim-provider": "^5.0",
         "orchestra/testbench": "^3.8 || ^4.0"
+    },
+    "suggest": {
+        "geocoder-php/google-maps-provider": "Use google_maps provider for reverse geolocation (^4.4).",
+        "geocoder-php/nominatim-provider": "Use nominatim provider for reverse geolocation (^5.0)."
     },
     "config": {
         "optimize-autoloader": true,
