--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ env:
     - coverage=no
   matrix:
     - laravel=^5.8
+    - laravel=^6.0
     - setup=stable laravel=^5.8
+    - setup=stable laravel=^6.0
     - setup=lowest laravel=^5.8
+    - setup=lowest laravel=^6.0
 
 before_install:
   - travis_retry composer self-update
