--- a/composer.json
+++ b/composer.json
@@ -20,15 +20,15 @@
         }
     },
     "require": {
-        "php": ">=7.2",
-        "orchestra/support": "^3.8 || ^4.0 || ^5.0",
-        "php-http/guzzle6-adapter": "^2.0",
+        "php": "^7.4 || ^8.0",
+        "orchestra/support": "^6.0",
+        "php-http/guzzle7-adapter": "^1.0",
         "willdurand/geocoder": "^4.2"
     },
     "require-dev": {
         "geocoder-php/google-maps-provider": "^4.4",
         "geocoder-php/nominatim-provider": "^5.0",
-        "orchestra/testbench": "~3.8.5 || ^4.5 || ^5.0"
+        "orchestra/testbench": "^6.0"
     },
     "suggest": {
         "geocoder-php/google-maps-provider": "Use google_maps provider for reverse geolocation (^4.4).",
